--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="gradient">
-    <h1>Background Generator</h1>
+    <h1>Gradient Background Generator</h1>
     <input class="color1" type="color" name="color1" value="#0000ff">
     <input class="color2" type="color" name="color2" value="#ff0000">
     <h2>Current CSS Background </h2>
